# weather-mcp-server

./: .gitignore  AGENTS.md  manual_test.py  project_content.md  pyproject.toml
src/test/: test_server.py
src/weather_mcp/: __init__.py  __main__.py  server.py
test/: test_server.py  test_weather_integration.py  test_weather_unit.py
