[project]
name = "weather-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Freya Vance", email = "syuandchobitsaibot@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
]

[project.scripts]
weather-mcp = "weather_mcp:main"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
